Refine header: update to Pain+ branding and match reference layout
- Changed site name from 'Art Therapy Plus' to 'Pain+'
- Updated header layout to match FeelBetter reference design:
  - Logo now icon-only (removed text)
  - Navigation centered with absolute positioning
  - Reduced header height (h-14 md:h-16)
  - Changed 'Request a Demo' button to solid blue with rounded-full
  - Updated active link underline to use primary color
  - Replaced shadow with subtle border-bottom
- Updated email to contact@painplus.com
- Added meta description to index.html
- Updated all content references throughout the site
- Mobile menu also updated with new styling

The header now has a cleaner, more professional appearance matching
the reference site's minimalist aesthetic.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-react-typescript-boiler</title>
+    <meta name="description" content="Pain+ - AI-Powered Art Therapy Platform for transforming mental wellness through creative expression" />
+    <title>Pain+ | AI-Powered Art Therapy Platform</title>
   </head>
   <body>
     <div id="root"></div>
