Refactor UI components and content updates
Major updates:
- Add dark mode toggle to mobile menu
- Update FeaturesSection with new 'Why Pain+?' content structure
- Redesign ProblemStatement with content box and two-column layout
- Update problem statement text with chronic pain focus and 1.5B statistic
- Replace roman numerals with styled bullet points in features
- Remove unused icon components and imports
- Set dark mode as default for new users with flash prevention
- Update Logo component with variant support for light/dark modes
- Improve responsive styling and spacing across all breakpoints
- Add French translations for all new content
- Add new logo assets (blue/orange and white/blue variants)

UI improvements:
- Enhanced card shadows and hover states
- Better typography hierarchy with appropriate sizing
- Improved mobile responsiveness
- Cleaner visual separation with dividers
- More cohesive design with integrated stat displays

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Pain+ - AI-Powered Art Therapy Platform for transforming mental wellness through creative expression" />
     <title>Pain+ | AI-Powered Art Therapy Platform</title>
+    <script>
+      // Prevent flash of light mode - apply dark mode immediately for new users
+      (function() {
+        const stored = localStorage.getItem('theme');
+        if (stored === null || stored === 'dark') {
+          document.documentElement.classList.add('dark');
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
